--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </nav>
 
       <section>
-        <div class="container ps-5 py-5">
+        <div class="container-fluid ps-5 py-5">
             <div class="row">
                 <div class="col-lg-8">
                   <div class="column-title d-flex justify-content-between mb-3">
@@ -111,7 +111,7 @@
                     </table>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: auto;">
                         <div class="card-header fs-5">To do</div>
                         <div class="card-body border border-dark-subtle">
                             <ul class="list-group">
@@ -131,7 +131,7 @@
                         </div>
                     </div>  
 
-                    <div class="card mt-3" style="width: 18rem;">
+                    <div class="card mt-3" style="width: auto;">
                         <div class="card-header fs-5">F.A.Q.</div>
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
