--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
     rel="stylesheet"
@@ -46,7 +46,8 @@
                 <div class="col-lg-8">
                   <div class="column-title d-flex justify-content-between mb-3">
                     <h4>Catalogo Libri</h4>
-                    <button type="button" class="btn btn-primary d-block">Aggiungi Libro</button>
+                    <a href="./Newbook.html" class="btn btn-primary d-block" role="button">Aggiungi Libro</a>
+                    <!-- <button type="button" class="btn btn-primary d-block" href="./Newbook.html"></button> -->
                   </div>
                     <table class="table table-striped align-items-center">
                         <thead>
@@ -62,7 +63,7 @@
                                 <td scope="row">Il signore degli Anelli</td>
                                 <td>-</td>
                                 <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
-                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                                   <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button>
                                 </td>
                             </tr>
@@ -70,7 +71,7 @@
                                 <td scope="row">I Pilastri della Terra</td>
                                 <td>-</td>
                                 <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
-                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                                   <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button>
                                 </td>
                             </tr>
@@ -78,7 +79,7 @@
                                 <td scope="row">Il signore degli Anelli</td>
                                 <td>-</td>
                                 <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
-                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                                   <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button>
                                 </td>
                               </tr>
@@ -86,35 +87,35 @@
                                 <td scope="row">Harry Potter e La pietra filosofale</th>
                                 <td>18-01-2024</td>
                                 <td><div class="badge rounded-pill text-bg-warning">In prestito</div></td>
-                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                                <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                                   <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button></td>
                             </tr>
                             <tr>
                               <td scope="row">Harry Potter e La camera dei segreti</th>
                               <td>03-07-2023</td>
                               <td><div class="badge rounded-pill text-bg-warning">In prestito</div></td>
-                              <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                              <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                                 <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button></td>
                           </tr>
                             <tr>
                               <td scope="row">il codice da vinci</th>
                               <td>-</td>
                               <td><div class="badge rounded-pill text-bg-danger">Non disponibile</div></td>
-                              <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                              <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                                 <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button></td>
                           </tr>
                           <tr>
                             <td scope="row">Dallas 2024</th>
                             <td>-</td>
                             <td><div class="badge rounded-pill text-bg-success">Disponibile</div></td>
-                            <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                            <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                               <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button></td>
                         </tr>
                         <tr>
                           <td scope="row">Le cronache del fuoco e del ghiaccio</th>
                           <td>-</td>
                           <td><div class="badge rounded-pill text-bg-danger">Non disponibile</div></td>
-                          <td><button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></button></i>
+                          <td><button type="button" class="btn p-0 m-0"><i class="bi bi-pencil border border-dark-subtle p-1 me-1"></button></i>
                             <button type="button" class="btn p-0 m-0"><i class="bi bi-trash border border-dark-subtle p-1 me-1"></i></button></td>
                       </tr>
                         </tbody>
